# SHE

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Engine/: CMakeLists.txt
Engine/AI/: CMakeLists.txt
Engine/AI/Include/SHE/AI/: AuthoringAiService.hpp
Engine/AI/Source/: AuthoringAiService.cpp
Engine/Assets/: CMakeLists.txt
Engine/Assets/Include/SHE/Assets/: AssetManager.hpp
Engine/Assets/Source/: AssetManager.cpp
Engine/Audio/: CMakeLists.txt
Engine/Audio/Include/SHE/Audio/: AudioPlaybackContract.hpp  MiniaudioAudioService.hpp  NullAudioService.hpp
Engine/Audio/Source/: AudioPlaybackContract.cpp  MiniaudioAudioService.cpp  NullAudioService.cpp
Engine/Core/: CMakeLists.txt
Engine/Core/Include/SHE/Core/: AppClock.hpp  Application.hpp  ApplicationConfig.hpp  Layer.hpp  LayerStack.hpp  Logger.hpp  MathTypes.hpp  RuntimeServices.hpp  TickContext.hpp  Types.hpp
Engine/Core/Source/: AppClock.cpp  Application.cpp  LayerStack.cpp  Logger.cpp
Engine/Data/: CMakeLists.txt
Engine/Data/Include/SHE/Data/: DataService.hpp
Engine/Data/Source/: DataService.cpp
Engine/Diagnostics/: CMakeLists.txt
Engine/Diagnostics/Include/SHE/Diagnostics/: DiagnosticsService.hpp
Engine/Diagnostics/Source/: DiagnosticsService.cpp
Engine/Gameplay/: CMakeLists.txt
Engine/Gameplay/Include/SHE/Gameplay/: CommandBuffer.hpp  CommandRegistry.hpp  EventBus.hpp  GameplayService.hpp  TimerService.hpp
Engine/Gameplay/Source/: CommandBuffer.cpp  CommandRegistry.cpp  EventBus.cpp  GameplayService.cpp  TimerService.cpp
Engine/Physics/: CMakeLists.txt
Engine/Physics/Include/SHE/Physics/: Box2DPhysicsService.hpp  NullPhysicsService.hpp
Engine/Physics/Source/: Box2DPhysicsService.cpp  NullPhysicsService.cpp
Engine/Platform/: CMakeLists.txt
Engine/Platform/Include/SHE/Platform/: NullWindowService.hpp  SdlWindowService.hpp
Engine/Platform/Source/: NullWindowService.cpp  SdlWindowService.cpp
Engine/Reflection/: CMakeLists.txt
Engine/Reflection/Include/SHE/Reflection/: ReflectionService.hpp
Engine/Reflection/Source/: ReflectionService.cpp
Engine/Renderer/: CMakeLists.txt
Engine/Renderer/Include/SHE/Renderer/: NullRendererService.hpp  Renderer2DService.hpp
Engine/Renderer/Source/: NullRendererService.cpp  Renderer2DService.cpp
Engine/Scene/: CMakeLists.txt
Engine/Scene/Include/SHE/Scene/: Components.hpp  Entity.hpp  SceneWorld.hpp
Engine/Scene/Source/: SceneWorld.cpp
Engine/Scripting/: CMakeLists.txt
Engine/Scripting/Include/SHE/Scripting/: ScriptingService.hpp
Engine/Scripting/Source/: ScriptingService.cpp
Engine/UI/: CMakeLists.txt
Engine/UI/Include/SHE/UI/: DebugUiService.hpp  NullUiService.hpp
Engine/UI/Source/: DebugUiService.cpp  NullUiService.cpp
Game/: CMakeLists.txt
Game/Features/: README.md
Game/Features/Bootstrap/: BootstrapFeatureLayer.cpp  BootstrapFeatureLayer.hpp  README.md
Game/Features/Bootstrap/Data/: bootstrap_encounter.schema.yml  bootstrap_enemy.schema.yml
Game/Features/Bootstrap/Scripts/: spawn_rules.lua
Game/Features/FallingBlocks/: FallingBlocksFeatureLayer.cpp  FallingBlocksFeatureLayer.hpp  FallingBlocksGame.cpp  FallingBlocksGame.hpp  README.md
Game/Features/FallingBlocks/Data/: board.placeholder  frame.placeholder  grid.placeholder  hud.placeholder  piece_i.placeholder  piece_j.placeholder  piece_l.placeholder  piece_o.placeholder  piece_s.placeholder  piece_t.placeholder  piece_z.placeholder
Game/Features/RogueLite/: README.md  RogueLiteFeatureLayer.cpp  RogueLiteFeatureLayer.hpp  RogueLiteGame.cpp  RogueLiteGame.hpp
Game/Features/RogueLite/Data/: core.placeholder  enemy_brute.placeholder  enemy_brute.yml  enemy_grunt.placeholder  enemy_grunt.yml  enemy_shooter.placeholder  enemy_shooter.yml  heart.placeholder  hud.placeholder  pickup_core.yml  pickup_heart.yml  player.placeholder  portal.placeholder  projectile_enemy.placeholder  projectile_player.placeholder  room_01.yml  room_02.yml  room_03.yml  room_floor.placeholder  wall.placeholder  weapon_sidearm.yml
Game/Features/VerticalSlice/: README.md  VerticalSliceFeatureLayer.cpp  VerticalSliceFeatureLayer.hpp
Game/Features/VerticalSlice/Data/: backdrop.placeholder  hazard.placeholder  hud.placeholder  pickup.placeholder  pickup_alpha.yml  pickup_beta.yml  pickup_gamma.yml  player.placeholder  round_main.yml  timer.placeholder  wave_finale.yml  wave_flank.yml  wave_opening.yml
Game/Features/VerticalSlice/Scripts/: arena_flow.lua
Game/Source/: BootstrapLayer.cpp  BootstrapLayer.hpp  Main.cpp
Tests/: CMakeLists.txt
Tests/Source/: AssetContractTests.cpp  AudioContractTests.cpp  BootstrapScriptRegistrationTests.cpp  DataContractTests.cpp  FallingBlocksFlowTests.cpp  FallingBlocksLogicTests.cpp  FallingBlocksSmokeTests.cpp  GameplayContractTests.cpp  PhysicsContractTests.cpp  PlatformInputTests.cpp  RendererContractTests.cpp  RogueLiteFlowTests.cpp  RogueLiteLogicTests.cpp  RogueLiteSmokeTests.cpp  SceneContractTests.cpp  ScriptingHostTests.cpp  SmokeTests.cpp  UiContractTests.cpp  VerticalSliceFlowTests.cpp  VerticalSliceSmokeTests.cpp
Tests/Source/Scripts/: tests_smoke_module.lua
Tools/Dev/: Create-MultiCodexWorktrees.ps1
Tools/Sandbox/: CMakeLists.txt
cmake/: SHEProjectOptions.cmake
coordination/: HANDOFF_TEMPLATE.md  INTEGRATION_REPORT.md  NEXT_PHASE_AUTHORING_DEBUG_LAUNCH.md  NEXT_PHASE_PLAYABLE_RUNTIME_LAUNCH.md  NEXT_PHASE_PRODUCTIZATION_LAUNCH.md  NEXT_PHASE_RUNTIME_LAUNCH.md  NEXT_PHASE_VERTICAL_SLICE_LAUNCH.md  README.md  SESSION_BOOTSTRAP.md  STATUS_LEDGER.md  TASK_BOARD.md  WORKSTREAM_TEMPLATE.md
coordination/HANDOFFS/: 2026-04-13-w01-gameplay-contracts.md  2026-04-13-w02-data-contract-layer.md  2026-04-13-w03-ai-context-data-registry-alignment.md  2026-04-13-w03-diagnostics-context-structure.md  2026-04-13-w03-rebase-final-merge.md  README.md  (+10 more)
docs/: ACCEPTANCE_CHECKLIST.md  AI_CONTEXT.md  AI_NATIVE_OPEN_WORLD_BLUEPRINT_V2.md  AI_NATIVE_REFACTOR.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  DEVELOPMENT_WORKFLOW.md  MILESTONES.md  MODULE_PRIORITY.md  MULTI_CODEX_LAUNCH_PLAN.md  MULTI_CODEX_WORKFLOW.md  TECH_STACK.md
(+24 files in other folders)
